# quantum-zx-calculus-mcp

./: .gitignore  README.md  STRUCTURE_PATTERN.md  create_structure.sh  pyproject.toml  quantum_zx_calculus.py  quantum_zx_ologs.py  quantum_zx_server.py  test_quantum_zx.py  verify_structure.sh
src/quantum_zx/: __init__.py  __main__.py  handler.py
tests/: __init__.py  run_tests.sh
tests/integration/: __init__.py
tests/unit/: __init__.py
