[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-zx-calculus-mcp"
version = "0.1.0"
description = "Quantum ZX-Calculus MCP Server - Convert quantum circuits to ZX-diagrams using categorical quantum mechanics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Lushy", email = "info@lushy.ai"}
]
license = {text = "MIT"}

dependencies = [
    "fastmcp>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
quantum-zx = "quantum_zx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_zx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
